# fastcausal

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  ConsolidationPlan.md  ConsolidationRecommendation.md  Description.md  README.md  environment.yml  fastcausal_demo_short.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
algorithms/: index.html
api/: index.html
docs/: algorithms.md  api.md  index.md  migration_from_cda_tools2.md  migration_from_fastcda.md  user_guide.md
docs/tutorials/: ema_analysis.ipynb  quickstart.ipynb
examples/notebooks/: ema_analysis.ipynb  graph_pd1.dot  graph_pd2.dot  graph_pd3.dot  quickstart.ipynb
fastcausal/: __init__.py  cli.py  core.py  edges.py  knowledge.py  search.py  sem.py  transform.py
fastcausal/io/: __init__.py  data.py  wearables.py
fastcausal/pipeline/: __init__.py  batch.py  config.py  metrics.py  parse.py  paths.py  report.py
fastcausal/viz/: __init__.py  graphs.py  plots.py  styling.py
migration_from_cda_tools2/: index.html
migration_from_fastcda/: index.html
search/: search_index.json
tests/: test_cli.py  test_config.py  test_core.py  test_edges.py  test_knowledge.py  test_pipeline.py  test_search.py  test_sem.py  test_transform.py  test_viz.py
tutorials/ema_analysis/: index.html
tutorials/quickstart/: index.html
user_guide/: index.html
