[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcausal"
version = "0.1.3"
authors = [
  { name = "Kelvin O. Lim", email = "lim.kelvino@gmail.com" },
]
description = "Fast, easy-to-use causal discovery analysis tools"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "tetrad-port>=0.3.0",
    "dgraph_flex>=0.1.11",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "PyYAML>=6.0",
    "tqdm>=4.60",
    "graphviz>=0.20",
    "click>=8.0",
]

[project.optional-dependencies]
sem = ["semopy>=2.3"]
jupyter = [
    "ipykernel>=7.0",
    "ipywidgets>=8.0",
    "ipython>=8.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
batch = [
    "python-docx>=1.0",
    "pillow>=10.0",
]
all = ["fastcausal[sem,jupyter,batch]"]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
dev = [
    "fastcausal[all,docs]",
    "pytest>=7.0",
]

[project.scripts]
fastcausal = "fastcausal.cli:main"

[project.urls]
Homepage = "https://github.com/kelvinlim/fastcausal"
Repository = "https://github.com/kelvinlim/fastcausal"
Issues = "https://github.com/kelvinlim/fastcausal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastcausal*"]
exclude = [".venv*", "tests*", "docs*", "examples*", "build*", "dist*", "tetrad-port*", "cda_tools2*", "dgraph_flex*"]

[tool.setuptools.package-data]
"fastcausal" = ["data/*.csv", "data/*.txt"]
